core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Link__c/ZVC__Zoom_Webinar_Link__c.object-meta.xml
<CustomObject>
    <label>Zoom Webinar Link</label>
    <nameField>
        <displayFormat>Webinar-Link-{0000}</displayFormat>
        <label>Zoom Webinar Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinar Links</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>