core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Link__c/fields/ZVC__Contact__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Zoom_Webinar_Link</relationshipName>
    <type>Lookup</type>
</CustomField>