core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Link__c/fields/ZVC__Is_Attended__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Is_Attended__c</fullName>
    <formula>IF(ZVC__Zoom_Webinar_Attendee__c == null, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Attended</label>
    <type>Checkbox</type>
</CustomField>