core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Link__c/fields/ZVC__Lead__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Zoom_Webinar_Link</relationshipName>
    <type>Lookup</type>
</CustomField>