core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Link__c/fields/ZVC__Topic__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Topic__c</fullName>
    <formula>ZVC__Zoom_Webinar__r.ZVC__Topic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Topic</label>
    <type>Text</type>
</CustomField>