core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Link__c/fields/ZVC__Zoom_Webinar__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Webinar</label>
    <referenceTo>ZVC__Zoom_Webinar__c</referenceTo>
    <relationshipName>Zoom_Webinar_Link</relationshipName>
    <type>Lookup</type>
</CustomField>